[gd_scene load_steps=4 format=3 uid="uid://36ku13axo8lh"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_dl0la"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_brb55"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tg87t"]
bg_color = Color(0.268445, 0.674921, 0.64725, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dl0la")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -65.0
offset_right = 218.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_brb55")
theme_override_styles/hover = SubResource("StyleBoxFlat_tg87t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tg87t")
theme_override_styles/normal = SubResource("StyleBoxFlat_tg87t")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_brb55")
theme_override_styles/hover = SubResource("StyleBoxFlat_tg87t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tg87t")
theme_override_styles/normal = SubResource("StyleBoxFlat_tg87t")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_brb55")
theme_override_styles/hover = SubResource("StyleBoxFlat_tg87t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tg87t")
theme_override_styles/normal = SubResource("StyleBoxFlat_tg87t")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -196.0
offset_right = 290.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Quit_pressed"]
